--- a/server/package.json
+++ b/server/package.json
@@ -22,10 +22,18 @@
   "dependencies": {
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/graphql": "^6.5.3",
+    "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.7.2",
+    "@typegoose/typegoose": "^6.0.4",
+    "apollo-server-express": "^2.9.7",
+    "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.6",
+    "mongoose": "^5.7.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "type-graphql": "^0.17.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
