--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^6.7.2",
     "@typegoose/typegoose": "^6.0.4",
     "apollo-server-express": "^2.9.7",
+    "argon2": "^0.25.1",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
     "mongoose": "^5.7.7",
