--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "argon2": "^0.25.1",
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -42,6 +43,7 @@
     "@nestjs/testing": "^6.7.1",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.28",
     "@types/node": "^12.7.5",
     "@types/supertest": "^2.0.8",
